--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <h1>lecteur</h1>
-	<my-player src="https://mainline.i3s.unice.fr/mooc/LaSueur.mp3"></my-player>
+	<my-player></my-player>
 </body>
 
 </html>
